--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </div>
   </header>
-
+<!-- sections -->
   <section class="skills">
     <div class="skills__container">
       <article class="skill-item">
