--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
   </header>
   
-<!-- sections -->
+<!-- sections# -->
   <section class="skills">
     <div class="skills__container">
       <article class="skill-item">
