--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/png">
   <!-- Подключаем normalize.css -->
-  <link rel="stylesheet" href="libs/normalize.css/normalize.css">
+  <!-- <link rel="stylesheet" href="libs/normalize.css/normalize.css"> -->
   <!-- Подключаем шрифты Roboto и Roboto Slab c сервиса google -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700%7CRoboto:100,300,400,500,700,900"
     rel="stylesheet">
