--- a/index.html
+++ b/index.html
@@ -33,12 +33,16 @@
             <span class="header-logo__accent">SITE</span>LOGO</a>
         </div>
         <nav class="header-navbar">
-
           <div class="header-navbar__btn">
             <span class="header-navbar__btn-row"></span>
             <span class="header-navbar__btn-row"></span>
             <span class="header-navbar__btn-row"></span>
+            <span class="header-navbar__btn-row"></span>
+            <span class="header-navbar__btn-row"></span>
+            <span class="header-navbar__btn-row"></span>
           </div>
+
+
           <ul class="header-navbar__list">
             <li class="header-navbar__item">
               <a href="#" class="header-navbar__link">Home</a>
@@ -66,8 +70,8 @@
       </div>
     </div>
   </header>
-  
-<!-- section -->
+
+  <!-- section -->
   <section class="skills">
     <div class="skills__container">
       <article class="skill-item">
