--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </div>
   </header>
 
-  <!-- section -->
+  <!-- section skills -->
   <section class="skills">
     <div class="skills__container">
       <article class="skill-item">
@@ -152,24 +152,47 @@
     </div>
   </section>
 
-<!-- section about -->
+  <!-- section about -->
 
-<section class="about">
-  <div class="about__container">
-    <div class="about__content">
-      <h2>Are You Ready?<br>
-        Let's start!</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis fugiat amet molestias provident unde, deleniti quo ducimus placeat voluptas!</p>
-        <p>Quisquam voluptatum quae veritatis quas odio dolores quis voluptas asperiores ex obcaecati reiciendis quidem ducimus et doloribus sed tempore, unde beatae aut consectetur eligendi ratione repellendus nulla pariatur. Explicabo enim officia iure blanditiis eos, velit.</p>
-        <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta recusandae quas nobis reprehenderit necessitatibus placeat corporis enim aliquid sequi saepe. Quos amet, aliquam, reiciendis porro eos voluptates maiores. Voluptas dolor quidem tempora illum laboriosam dolorum neque tenetur..</p>
-          <p>Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis fugiat amet molestias provident unde, deleniti quo ducimus placeat voluptas! Quos amet, aliquam, reiciendis porro eos voluptates maiores.</p>
-          <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta recusandae quas nobis reprehenderit necessitatibus placeat corporis enim aliquid sequi saepe.</p>
+  <section class="about">
+    <div class="about__container">
+      <div class="about__content">
+        <h2>Are You Ready?<br>
+          Let's start!</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptates commodi eligendi perspiciatis non
+          ipsam numquam, perferendis fugiat amet molestias provident unde, deleniti quo ducimus placeat voluptas!</p>
+        <p>Quisquam voluptatum quae veritatis quas odio dolores quis voluptas asperiores ex obcaecati reiciendis quidem
+          ducimus et doloribus sed tempore, unde beatae aut consectetur eligendi ratione repellendus nulla pariatur.
+          Explicabo enim officia iure blanditiis eos, velit.</p>
+        <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta recusandae quas nobis
+          reprehenderit necessitatibus placeat corporis enim aliquid sequi saepe. Quos amet, aliquam, reiciendis porro
+          eos voluptates maiores. Voluptas dolor quidem tempora illum laboriosam dolorum neque tenetur..</p>
+        <p>Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis fugiat amet molestias provident
+          unde, deleniti quo ducimus placeat voluptas! Quos amet, aliquam, reiciendis porro eos voluptates maiores.</p>
+        <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta recusandae quas nobis
+          reprehenderit necessitatibus placeat corporis enim aliquid sequi saepe.</p>
+      </div>
+      <div class="about__image">
+        <img src="assets/img/img-lamp-webdev.png" alt="">
+      </div>
     </div>
-    <div class="about__image">
-      <img src="assets/img/img-lamp-webdev.png" alt="">
+  </section>
+
+  <!-- section form -->
+
+  <section class="form">
+    <div class="form__container">
+      <div class="form-item">
+        <input class="form-item__input" name="name" type="text" placeholder="Your name..." >
+      </div>
+      <div class="form-item">
+        <input class="form-item__input" name="mail" type="text" placeholder="Your email..." >
+      </div>
+      <div class="form-item">
+        <button class="btn btn--primary" type="submit">Subscribe</button>
+      </div>
     </div>
-  </div>
-</section>
+  </section>
 
 
 
