--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+
   <!-- header -->
   <header class="header" style="background-image: url(assets/img/img-header.png)">
     <div class="header-overlay" style="background-color: #2d3651; opacity: 0.8;">
@@ -303,6 +304,33 @@
       </div>
     </div>
   </section>
+
+  <!-- footer -->
+  <div class="footer">
+    <div class="footer__container">
+      <div class="footer__social">
+        <a href="#">
+          <i class="fab fa-facebook-square"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-google-plus-square"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-twitter-square"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-pinterest-square"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-flickr"></i>
+        </a>
+      </div>
+      <div class="footer__text">
+        <span>WE ARE REAL</span><br>
+        <span>WEB-DEVELOPERS</span>
+      </div>
+    </div>
+  </div>
 
 
 
